<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="welcome_text">Welcome to Whatsapp Clone!</string>
    <string name="login">Login</string>
    <string name="createacc">Create an account</string>
    <string name="ImageContentDescription">An image</string>
    <string name="login_to_whatsapp_clone">Login to Whatsapp clone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_status">Change Status</string>
    <string name="default_status_display">Hey there! I am using Whatsapp Clone</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="display_username">Display Username</string>
    <string name="pick_a_new_status">Pick a new status</string>
    <string name="current_status_display">Current Status Display</string>
    <string name="your_current_status">Your Current Status</string>
    <string name="status">Status</string>
</resources>